# Laythe

./: .gitignore  Cargo.toml  LICENSE  README.md  laythe.bnf  laythe.grammar  perf.data  perf.data.old  profiling.md  rustfmt.toml  spacelox.grammar  temp.txt  test.lay  test.lox
laythe/: Cargo.toml
laythe/src/: main.rs
laythe_compiler_bench/: Cargo.toml
laythe_compiler_bench/src/: main.rs
laythe_core/: Cargo.toml
laythe_core/src/: align_utils.rs  allocator.rs  call_frame.rs  captures.rs  chunk.rs  constants.rs  dynamic_map.rs  hooks.rs  impls.rs  iterator.rs  lib.rs  lin_map.rs  macros.rs  memory.rs  module.rs  native.rs  object.rs  package.rs  signature.rs  token.rs  utils.rs  value.rs
laythe_core/src/collections/: array.rs  mod.rs
laythe_core/src/managed/: allocate.rs  allocation.rs  allocator.rs  gc.rs  gc_array.rs  gc_list.rs  gc_obj.rs  gc_str.rs  header.rs  instance.rs  manage.rs  mod.rs  tuple.rs  utils.rs
laythe_core/src/module/: error.rs  import.rs  mod.rs  module.rs  package.rs
laythe_core/src/object/: capture.rs  channel.rs  class.rs  closure.rs  enumerator.rs  fiber.rs  fun.rs  header.rs  instance.rs  iterator.rs  list.rs  ly_box.rs  ly_str.rs  map.rs  method.rs  mod.rs  native.rs  tuple.rs  upvalue.rs
laythe_core/src/reference/: mod.rs  obj_reference.rs
laythe_core/src/support/: mod.rs
laythe_env/: Cargo.toml
laythe_env/src/: env.rs  fs.rs  impls.rs  io.rs  lib.rs  managed.rs  memory.rs  stdio.rs  time.rs
laythe_env/src/managed/: allocation.rs  gc.rs  gc_array.rs  gc_str.rs  manage.rs  mod.rs
laythe_frontend_bench/: Cargo.toml  perf.data.old
laythe_frontend_bench/src/: main.rs
laythe_lib/: Cargo.toml
laythe_lib/src/: builtin.rs  lib.rs
laythe_lib/src/env/: mod.rs  utils.rs
laythe_lib/src/global/: misc.rs  mod.rs
laythe_lib/src/io/: mod.rs
laythe_lib/src/math/: mod.rs  utils.rs
laythe_lib/src/regexp/: class.rs  mod.rs
laythe_lib/src/support/: mod.rs
laythe_macro/: Cargo.toml
laythe_vm/: Cargo.toml
laythe_vm/benches/: compiler_benches.rs  parser_benches.rs  vm_benches.rs
laythe_vm/fixture/: test.lay
laythe_vm/fixture/benchmark/: binary_trees.lay  binary_trees.ly  channel.lay  collections.lay  equality.lay  equality.ly  fib.lay  fib.ly  fibers.lay  fluent.lay  fluent.ly  instantiation.lay  instantiation.ly  invocation.lay  invocation.ly  launch_fibers.lay  list.lay  list.ly  list2.lay  list2.ly  list_range.lay  list_range.ly  method_call.lay  method_call.ly  properties.lay  properties.ly  string.lay  string_equality.lay  trees.lay  trees.ly  zoo.lay  zoo.ly
laythe_vm/fixture/compiler/: README.md  arm_compiler.lay
laythe_vm/fixture/criterion/: binary_trees.lay  binary_trees.ly  channel.lay  equality.lay  fib.lay  fibers.lay  fluent.lay  instantiation.lay  instantiation.ly  invocation.lay  invocation.ly  method_call.lay  method_call.ly  properties.lay  properties.ly  string.lay  string_equality.lay  string_equality.ly  trees.lay  trees.ly  zoo.lay  zoo.lox  zoo.ly
laythe_vm/fixture/demo/: gameOfLife.lay  gameOfLife.ly
laythe_vm/fixture/language/: precedence.lay  test.lay
laythe_vm/fixture/lox_interpreter/: constant.lay  error.lay  lox.lay  node.lay  object.lay  parser.lay  resolver.lay  scanner.lay
laythe_vm/fixture/py_benchmark/: binary_trees.py  equality.py  fib.py  instantiation.py  invocation.py  method_call.py  properties.py  strings.py  zoo.py
laythe_vm/fixture/rb_benchmark/: binary_trees.rb  equality.rb  fib.rb  instantiation.rb  invocation.rb  list.rb  method_call.rb  properties.rb  string.rb  trees.rb  zoo.rb
laythe_vm/src/: ast.rs  ast_printer.rs  byte_code.rs  cache.rs  call_frame.rs  chunk_builder.rs  compiler.rs  compiler_one_pass.rs  constants.rs  debug.rs  dep_manager.rs  files.rs  lib.rs  parser.rs  scanner.rs  token.rs  vm.rs
laythe_vm/src/compiler/: compiler.rs  mod.rs  parser.rs  peephole.rs  ref_no_context.rs  resolver.rs  scanner.rs
laythe_vm/src/fiber/: builder.rs  call_frame.rs  exception_handler.rs  mod.rs
laythe_vm/src/source/: files.rs  mod.rs
laythe_vm/src/vm/: basic.rs  debug.rs  error.rs  hooks.rs  impls.rs  mod.rs  ops.rs  source_loader.rs
laythe_vm/tests/: builtin.rs  env.rs  global.rs  io.rs  language.rs  math.rs  regexp.rs
laythe_vm/tests/support/: mod.rs
laythe_wasm/: Cargo.toml
laythe_wasm/src/: lib.rs  stdio_wasm.rs  time_wasm.rs
laythe_wasm/web/: index.html  index.js  init.js  language.js  package-lock.json  package.json  webpack.config.js
spacelox/: Cargo.toml
spacelox/src/: main.rs
spacelox_compiler_bench/: Cargo.toml
spacelox_compiler_bench/src/: main.rs
spacelox_core/: Cargo.toml
spacelox_core/src/: arity.rs  chunk.rs  constants.rs  dynamic_map.rs  hooks.rs  io.rs  iterator.rs  lib.rs  managed.rs  memory.rs  module.rs  native.rs  object.rs  package.rs  signature.rs  token.rs  utils.rs  value.rs
spacelox_lib/: Cargo.toml
spacelox_lib/src/: lib.rs
spacelox_lib/src/assert/: assert.rs  mod.rs
spacelox_lib/src/builtin/: bool.rs  class.rs  closure.rs  fun.rs  iter.rs  list.rs  map.rs  method.rs  mod.rs  native.rs  native_fun.rs  native_method.rs  nil.rs  number.rs  string.rs
spacelox_lib/src/global/: mod.rs
spacelox_lib/src/math/: mod.rs  utils.rs
spacelox_lib/src/support/: mod.rs
spacelox_lib/src/time/: clock.rs  mod.rs
spacelox_vm/: Cargo.toml
spacelox_vm/benches/: compiler_benches.rs  script_bench.rs  vm_benches.rs
spacelox_vm/fixture/: test.lox
spacelox_vm/fixture/benchmark/: binary_trees.lox  fib.lox  instantiation.lox  invocation.lox  list.lox  list2.lox  list_range.lox  method_call.lox
spacelox_vm/fixture/block/: scope.lox
spacelox_vm/fixture/bool/: not.lox
spacelox_vm/fixture/class/: inherited_method.lox
spacelox_vm/fixture/closure/: assign_to_shadowed_later.lox  nested_closure.lox
spacelox_vm/fixture/constructor/: call_init_early_return.lox  early_return.lox  return_in_nested_function.lox
spacelox_vm/src/: call_frame.rs  compiler.rs  constants.rs  debug.rs  dep_loader.rs  dep_manager.rs  lib.rs  memory.rs  scanner.rs  vm.rs
spacelox_vm/tests/: builtin.rs  integrations.rs  language.rs  math.rs
(+1036 files in other folders)
