[workspace]
members = [
  "laythe_compiler_bench",
  "laythe_native",
  "laythe_core",
  "laythe_lib",
  "laythe_macro",
  "laythe_env",
  "laythe_vm",
  "laythe_wasm",
  "laythe",
]

default-members = [
  "laythe_core",
  "laythe_native",
  "laythe_lib",
  "laythe_macro",
  "laythe_env",
  "laythe_vm",
  "laythe_wasm",
  "laythe",
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = true
lto = "fat"
