[workspace]
members = [
  "laythe_frontend_bench",
  "laythe_native",
  "laythe_core",
  "laythe_lib",
  "laythe_env",
  "laythe_vm",
  "laythe_wasm",
  "laythe",
]

default-members = [
  "laythe_core",
  "laythe_native",
  "laythe_lib",
  "laythe_env",
  "laythe_vm",
  "laythe",
]

[profile.dev]
opt-level = 0

[profile.release]
debug = true
lto = "fat"
opt-level = 3
