[package]
name = "laythe"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2018"

[[bin]]
name = "laythe"
path = "src/main.rs"

[dependencies]
laythe_core = { path = "../laythe_core", features=["nan_boxing"] }
laythe_vm = { path = "../laythe_vm", features=["debug"] }

# laythe_vm features
# debug
# debug_upvalue
# debug_stress_gc
# debug_gc