[package]
name = "laythe"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2018"

[features]
jemalloc = ["jemallocator"]

[profile.release]
debug = true

[[bin]]
name = "laythe"
path = "src/main.rs"

[dependencies]
laythe_vm = { path = "../laythe_vm" }
laythe_env = { path = "../laythe_env" }
jemallocator = { version = "0.3.2", optional = true }

# laythe_vm features
# debug
# debug_upvalue
# debug_stress_gc
# debug_gc