[package]
name = "laythe"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2021"

[features]
jemalloc = ["jemallocator"]

[[bin]]
name = "laythe"
path = "src/main.rs"

[dependencies]
laythe_vm = { path = "../laythe_vm", features=["nan_boxing"] }
# laythe_vm features
# debug

jemallocator = { version = "0.5.0", optional = true }