[package]
name = "laythe_compiler_bench"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
laythe_core = { path = "../laythe_core" }
laythe_vm = { path = "../laythe_vm" }
laythe_env = { path = "../laythe_env" }