[package]
name = "laythe_core"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2018"

[features]
nan_boxing = []
gc_log_mark = []
gc_log_free = []
gc_log_alloc = []
gc_stress = []

[lib]
name = "laythe_core"
path = "src/lib.rs"

[dependencies]
laythe_env = { path = "../laythe_env" }
fnv = "1.0.7"
hashbrown = "0.11.2"