[package]
name = "laythe_env"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2018"

[lib]
name = "laythe_env"
path = "src/lib.rs"

[features]
gc_log_mark = []
gc_log_free = []
gc_log_alloc = []
gc_stress = []

[dependencies]
hashbrown = "0.9.1"
fnv = "1.0.3"
termcolor = "1.1.2"