[package]
name = "laythe_lib"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2024"

[features]
default = ["desktop"]
wasm = ["js-sys"]
desktop = ["rand"]
nan_boxing = ["laythe_core/nan_boxing"]
gc_log_mark = ["laythe_core/gc_log_mark"]
gc_log_free = ["laythe_core/gc_log_free"]
gc_log_alloc = ["laythe_core/gc_log_alloc"]
gc_log_retain = ["laythe_core/gc_log_retain"]
gc_stress = ["laythe_core/gc_stress"]

[lib]
name = "laythe_lib"
path = "src/lib.rs"

[dependencies]
laythe_core = { path = "../laythe_core" } # , features = ["nan_boxing"]
laythe_env = { path = "../laythe_env" }
laythe_native = { path = "../laythe_native" }
hashbrown = "0.15.4"
js-sys = { version = "0.3.77", optional = true }
fnv = "1.0.7"
rand = { version = "0.8.5", optional = true }
regex = "1.11.1"

[dev-dependencies]
criterion = "0.7.0"
