[package]
name = "laythe_vm"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2021"

[features]
debug = []
wasm = ["laythe_lib/wasm"]

[lib]
name = "laythe_vm"
path = "src/lib.rs"

[dependencies]
laythe_core = { path = "../laythe_core",  features=["nan_boxing"] }
# gc_stress
# gc_log_alloc
# gc_log_free
# gc_log_mark
laythe_lib = { path = "../laythe_lib" }
laythe_env = { path = "../laythe_env" }
laythe_native = { path = "../laythe_native" }
fnv = "1.0.7"
codespan = "0.11.1"
variant_count = "1.1.0"
codespan-reporting = "0.11.1"
bumpalo = { version = "3.7.0", features=["boxed", "collections"] }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "vm_benches"
harness = false

[[bench]]
name = "compiler_benches"
harness = false

[[bench]]
name = "parser_benches"
harness = false