[package]
name = "laythe_wasm"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]

[dependencies]
laythe_vm = { path = "../laythe_vm", features=["wasm"] }
laythe_env = { path = "../laythe_env" }
laythe_core = { path = "../laythe_core" }

wasm-bindgen = "0.2.93"
js-sys = "0.3.70"
termcolor = "1.4.1"
web-sys = { version = "0.3.70", features = ["console"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
