[package]
name = "spacelox"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2018"

[[bin]]
name = "spacelox"
path = "src/main.rs"

[dependencies]
spacelox_core = { path = "../spacelox_core" }
spacelox_vm = { path = "../spacelox_vm" }

# spacelox_vm features
# debug
# debug_upvalue
# debug_stress_gc
# debug_gc