[package]
name = "spacelox_compiler_bench"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacelox_core = { path = "../spacelox_core" }
spacelox_vm = { path = "../spacelox_vm" }
spacelox_env = { path = "../spacelox_env" }