[package]
name = "spacelox_core"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2018"

[features]
nan_boxing = []

[lib]
name = "spacelox_core"
path = "src/lib.rs"

[dependencies]
spacelox_env = { path = "../spacelox_env" }
fnv = "1.0.3"
linear-map = "1.2.0"
hashbrown = "0.7.2"