[package]
name = "spacelox_lib"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2018"

[lib]
name = "spacelox_lib"
path = "src/lib.rs"

[dependencies]
spacelox_core = { path = "../spacelox_core" }
hashbrown = "0.7.2"
fnv = "1.0.3"

[dev-dependencies]
criterion = "0.3"