[package]
name = "spacelox_vm"
version = "0.1.0"
authors = ["John Chabot <johnchabot2013@gmail.com>"]
edition = "2018"

[features]
debug = []
debug_upvalue = []

[lib]
name = "spacelox_vm"
path = "src/lib.rs"

[dependencies]
spacelox_core = { path = "../spacelox_core", features = ["nan_boxing"] }
spacelox_lib = { path = "../spacelox_lib" }
fnv = "1.0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "vm_benches"
harness = false

[[bench]]
name = "compiler_benches"
harness = false